--- a/public/css/bangjas.css
+++ b/public/css/bangjas.css
@@ -1,3 +1,16 @@
+/* Always set the map height explicitly to define the size of the div
+* element that contains the map. */
+
+#map {
+    height: 100%;
+}
+/* Optional: Makes the sample page fill the window. */
+html, body {
+   height: 100%;
+   margin: 0;
+   padding: 0;
+}
+
 .navbar-brand span {
     font-weight: 300;
 }
@@ -27,7 +40,8 @@
 }
 
 header.masthead {
-    padding-top: calc(3rem + 106px)!important;
+    padding-top: calc(3rem + 106px);
+    padding-bottom: 50px;
 }
 
 .slogan {
@@ -44,4 +58,68 @@ header.masthead {
 
 .txt-1 {
     font-size: 18px;
+}
+
+.hasilpencarianhead {
+    padding-top: 150px!important;
+    padding-bottom: 30px!important;
+}
+
+.hasilpencarianhead h1 {
+    font-size: 50px!important;
+}
+
+.col-item-list {
+    overflow: hidden;
+    padding: 15px 0;
+}
+
+.a-item-list {
+    text-decoration: none;
+    color: black;
+}
+
+.a-item-list:hover {
+    text-decoration: none;
+    color: black;
+}
+
+.card {
+    overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.itb-image {
+    height: 300px;
+}
+
+.itb-image img {
+    height: 100%;
+    object-fit: cover;
+    margin: auto;
+}
+
+.item-head {
+    height: 50px;
+    width: 100%;
+    padding: 0 15px;
+    border-bottom: 0.5px solid rgba(0,0,0,0.2);
+    margin-bottom: 10px;
+}
+
+.item-footer {
+    height: 60px;
+    padding: 0 15px;
+}
+
+.item-head p {
+    font-size: 20px;
+    line-height: 50px;
+    font-weight: 500;
 }
